# cosmos-bsn-contracts

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION.md  README.md  RELEASE.md  go.work  go.work.sum  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: benchmarking.yml  changelog-reminder.yml  deploy.yml  local-tests.yml  wasm-tests-full.yml
contracts/babylon/: Cargo.toml  README.md
contracts/babylon/.cargo/: config.toml
contracts/babylon/schema/: babylon-contract.json
contracts/babylon/src/: bindings.rs  contract.rs  error.rs  ibc.rs  lib.rs  msg.rs  multitest.rs  state.rs  utils.rs
contracts/babylon/tests/: integration.rs
contracts/btc-finality/: Cargo.toml  README.md
contracts/btc-finality/schema/: btc-finality.json
contracts/btc-finality/src/: contract.rs  error.rs  events.rs  finality.rs  lib.rs  liveness.rs  msg.rs  multitest.rs  power_dist_change.rs  queries.rs  signing_context.rs  tallying.rs  test_utils.rs  tests.rs
contracts/btc-finality/tests/: integration.rs
contracts/btc-light-client/: Cargo.toml  README.md
contracts/btc-light-client/.cargo/: config.toml
contracts/btc-light-client/benches/: main.rs
contracts/btc-light-client/schema/: btc-light-client.json
contracts/btc-light-client/src/: bitcoin.rs  contract.rs  error.rs  lib.rs  queries.rs  (+2 more)
contracts/btc-staking/: Cargo.toml  README.md
datagen/: go.mod  go.sum  main.go
datagen/utils/: btccheckpoint.go  btclightclient.go  btcstaking.go  btctimestamp.go  eots.go  finality.go
docs/: ARCHITECTURE.md  Architecture.md  MESSAGE_FLOW.md  contract-instantiation.md  cosmos-bsn-integration.md  ibc-connection-guide.md
docs/images/: CosmosBSNIntegration.excalidraw  CosmosBSNModules.excalidraw
e2e/: Makefile  e2e_migration_test.go  e2e_test.go  go.mod  go.sum
e2e/testdata/: babylon_contract-v0.16.0.wasm  babylon_contract-v1.0.0-rc.0.wasm  btc_finality-v0.16.0.wasm  btc_finality-v1.0.0-rc.0.wasm  btc_light_client-v0.16.0.wasm  btc_light_client-v1.0.0-rc.0.wasm  btc_staking-v0.16.0.wasm  btc_staking-v1.0.0-rc.0.wasm
e2e/types/: datagen.go  setup.go  test_client.go  types.go
schema/: btc-staking.json
schema/raw/: query.json  response_to_delegation.json  response_to_delegations.json  response_to_finality_provider_info.json  response_to_finality_providers_by_total_active_sats.json
scripts/: buf-install.sh  check-schema-naming.sh  e2e_test.sh  protocgen.sh  publish.sh  schema.sh  set_version.sh
(+87 files in other folders)
