[workspace]
members  = ["packages/*", "contracts/*"]
resolver = "2"

[workspace.package]
edition    = "2021"
version    = "1.0.0-rc.3"
license    = "Apache-2.0"
repository = "https://github.com/babylonlabs-io/cosmos-bsn-contracts"
authors    = ["Babylon Labs Ltd. <admin@babylonlabs.io>"]
publish    = false

[workspace.metadata.scripts]
gen-proto       = "./scripts/protocgen.sh"
gen-data        = "go run datagen/*.go"
gen-schema      = "./scripts/schema.sh"
optimize        = "./scripts/optimizer.sh"
precommit       = "./scripts/precommit.sh"
lint            = "./scripts/lint.sh"
fix-lint        = "./scripts/fix-lint.sh"
integration     = "./scripts/integration_test.sh"
e2e             = "./scripts/e2e_test.sh"

[workspace.dependencies]
anybuf = { version = "0.5.0" }
babylon-apis = { path = "./packages/apis" }
babylon-proto = { path = "./packages/proto" }
babylon-contract = { path = "./contracts/babylon" }
eots = { path = "./packages/eots" }
anyhow = "1.0.82"
bech32 = "0.9.1"
bitcoin = "0.32.6"
bitvec = "1"
cosmos-sdk-proto = { version = "0.27.0", default-features = false, features = [
    "cosmwasm",
] }
cosmwasm-schema = "2.1.4"
cosmwasm-std = { version = "2.1.4", default-features = false, features = [
    "std",
    "abort",
    "staking",
    "stargate",
    "cosmwasm_2_0",
] }
cw2 = "2.0.0"
cw-controllers = "2.0.0"
cw-multi-test = { version = "2.0.1", features = [ "staking", "cosmwasm_1_1", "cosmwasm_2_0" ] }
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
derivative = "2"
digest = "0.10"
hex = "0.4.3"
ibc-proto = { version = "0.52.0", default-features = false }
prost = "0.13.5"
schemars = "0.8.3"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.6"
tendermint-proto = "0.40.4"
thiserror = "1.0.40"
k256 = { version = "0.13.1", default-features = false, features = ["schnorr"] }

# dev deps
cosmwasm-vm = { version = "2.1.4", default-features = false, features = [
    "iterator",
    "stargate",
] }
assert_matches = "1"
criterion = { version = "0.5.0" }
rand = "0.8.5"
pbjson-types = "0.7.0"
thousands = "0.2.0"

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
lto              = true
panic            = 'abort'
rpath            = false
opt-level        = 3
overflow-checks  = true
incremental      = false
